Tambah Navbar HTML

--- a/index.html
+++ b/index.html
@@ -7,3 +7,18 @@
     <title> Portfolio | Iin Sumarni</title>
     <link rel="stylesheet" href="style.css" />
 </head>
+<body>
+
+    <!-- Floating Navbar -->
+    <header>
+        <nav class="navbar">
+            <div class="logo">Iin Sumarni</div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#organization-experience">Organization Experience</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+</body>
