Tambah Landing Page HTML

--- a/index.html
+++ b/index.html
@@ -21,4 +21,17 @@
             </ul>
         </nav>
     </header>
+<section id="home" class="landing">
+    <div class="content">
+        <div class="text">
+            <h1>Hello, I'm <span>Iin</span></h1>
+            <p>A passionate <strong>Graphic & Web Designer</strong> crafting aesthetic and meaningful designs.</p>
+            <a href="#portfolio" class="btn">View My Work</a>
+        </div>
+        <div class="photo">
+            <img src="iin.jpg" alt="Iin Photo">
+        </div>
+    </div>
+</section>
+
 </body>
