--- a/index.html
+++ b/index.html
@@ -34,4 +34,28 @@
     </div>
 </section>
 
+<section id="portfolio" class="portfolio">
+    <h2>My Portfolio</h2>
+    <div class="portfolio-grid">
+        <div class="card">
+            <img src="Copy of 2025.jpg" alt="Project 1">
+            <h3>UI/UX Design Mobile Apps “NexApp”</h3>
+            <a href="https://drive.google.com/drive/folders/1cSUPjaPuYmVerK8IWhF4AhH_IhzdYGWr" target="_blank">View
+                Project →</a>
+        </div>
+        <div class="card">
+            <img src="Copy of 2025 (1).jpg" alt="Project 2">
+            <h3>UI/UX Design Mobile Apps “PsyCare”</h3>
+            <a href="https://drive.google.com/drive/folders/1cSUPjaPuYmVerK8IWhF4AhH_IhzdYGWr" target="_blank">View
+                Project →</a>
+        </div>
+        <div class="card">
+            <img src="Copy of 2025 (2).jpg" alt="Project 3">
+            <h3>Digivent Website</h3>
+            <a href="https://drive.google.com/drive/folders/1cSUPjaPuYmVerK8IWhF4AhH_IhzdYGWr" target="_blank">View
+                Project →</a>
+        </div>
+    </div>
+</section>
+
 </body>
