Tambah Pengalaman Organisasi Section

--- a/index.html
+++ b/index.html
@@ -58,4 +58,35 @@
     </div>
 </section>
 
+<section id="organization-experience" class="organization-experience">
+    <h2>Organization Experience</h2>
+    <div class="organization-list">
+
+        <div class="organization">
+            <img src="HIMATRO.jpg" alt="HIMATRO" class="organization-img">
+            <div class="organization-info">
+                <h3>HIMATRO</h3>
+                <p>Public Relations Division Member – Department Kominfo</p>
+            </div>
+        </div>
+
+        <div class="organization">
+            <img src="BRIN BANDUNG.jpg" alt="BRIN BANDUNG" class="organization-img">
+            <div class="organization-info">
+                <h3>VISPER -BRIN BANDUNG</h3>
+                <p>PDD Team Member</p>
+            </div>
+        </div>
+
+        <div class="organization">
+            <img src="ITB-IMG.jpg" alt="FORSIMA ITB - IMG" class="organization-img">
+            <div class="organization-info">
+                <h3>FORSIMA ITB - IMG</h3>
+                <p>PDD Team Member</p>
+            </div>
+        </div>
+
+    </div>
+</section>
+
 </body>
