--- a/index.html
+++ b/index.html
@@ -89,4 +89,14 @@
     </div>
 </section>
 
+<footer id="contact">
+    <h2>Contact Me</h2>
+    <div class="social-links">
+        <a href="https://www.instagram.com/iinns.i?igsh=a3RlZzY4c3luZGJi" target="_blank">Instagram</a>
+        <a href="https://search.yahoo.com/search?fr=mcafee&type=E210US91215G0&p=EMAIL">Email</a>
+        <a href="https://www.linkedin.com/in/iinsumarni" target="_blank">LinkedIn</a>
+    </div>
+    <p>© 2025 Iin Sumarni. All Rights Reserved.</p>
+</footer>
 </body>
+</html>
